testsuite/tests/grammar/invalid_lexers/bad_rule_1.lkt
lexer foo_lexer {
    lexer bar_lexer {
    }
}
